# clickup-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/clickup_mcp/: __main__.py  api_client.py  config.py  server.py
src/clickup_mcp/tools/: comments.py  docs.py  folders.py  lists.py  spaces.py  tasks.py  workspaces.py
